<resources>
    <string name="app_name">restaurant logging</string>
    <string name="title_activity_rhome1">rhome1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_home">home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_historicalorders">歷史訂單</string>
    <string name="menu_excel">報表</string>
    <string name="menu_menu">菜單</string>
    <string name="menu_service">客服</string>
    <string name="menu_order">訂單</string>
    <string name="menu_logout">登出</string>
    <string name="title_activity_hometown">hometown</string>
    <string name="error_no_order_data">找不到訂單數據</string>


</resources>