<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_historicalorders"
            android:icon="@drawable/ic_baseline_filter_vintage_24"
            android:title="@string/menu_historicalorders" />
        <item
            android:id="@+id/nav_excel"
            android:icon="@drawable/ic_baseline_attach_money_24"
            android:title="@string/menu_excel" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/menu_menu" />
        <item
            android:id="@+id/nav_service"
            android:icon="@drawable/ic_baseline_chat_24"
            android:title="@string/menu_service" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/baseline_fastfood_24"
            android:title="@string/menu_order" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/menu_logout" />

    </group>
</menu>